--- a/package.json
+++ b/package.json
@@ -13,6 +13,16 @@
   "author": "callmekurisu",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.14.0"
+    "body-parser": "^1.15.2",
+    "cookie-parser": "^1.4.3",
+    "csurf": "^1.9.0",
+    "express": "^4.14.0",
+    "express-stormpath": "^3.1.8",
+    "forms": "^1.3.0",
+    "jade": "^1.11.0",
+    "jstransformer": "^1.0.0",
+    "pug": "^2.0.0-beta6",
+    "uuid": "^3.0.1",
+    "xtend": "^4.0.1"
   }
 }
