--- a/package.json
+++ b/package.json
@@ -17,12 +17,8 @@
     "cookie-parser": "^1.4.3",
     "csurf": "^1.9.0",
     "express": "^4.14.0",
-    "express-stormpath": "^3.1.8",
-    "forms": "^1.3.0",
-    "jade": "^1.11.0",
-    "jstransformer": "^1.0.0",
-    "pug": "^2.0.0-beta6",
-    "uuid": "^3.0.1",
-    "xtend": "^4.0.1"
+    "request": "~2.79.0",
+    "url": "~0.11.0",
+    "moment": "~2.17.1"
   }
 }
