set port and listen on all ips

--- a/package.json
+++ b/package.json
@@ -4,11 +4,11 @@
   "description": "fcc api project",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+     "start": "node index.js"
   },
   "repository": {
     "type": "git",
-    "url": "timestamp"
+    "url": "https://tranquil-dawn-62735.herokuapp.com/"
   },
   "author": "callmekurisu",
   "license": "ISC",
